force-app/main/default/objects/Promotion__c/fields/BudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetAmount__c</fullName>
    <label>Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>