force-app/main/default/objects/Promotion__c/fields/ProgramType__c.field-meta.xml
<CustomField>
    <fullName>ProgramType__c</fullName>
    <label>Program Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Visibility</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>