force-app/main/default/objects/Promotion__c/fields/TargetBrands__c.field-meta.xml
<CustomField>
    <fullName>TargetBrands__c</fullName>
    <label>Target Brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>