force-app/main/default/objects/Promotion__c/fields/TargetSkusJSON__c.field-meta.xml
<CustomField>
    <fullName>TargetSkusJSON__c</fullName>
    <label>Target SKUs JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>